Fix overlap with new logo

--- a/components/Logo/styles.module.css
+++ b/components/Logo/styles.module.css
@@ -1,9 +1,10 @@
 .logo{
-  position: fixed;
   top: 3%;
   left: 3.5%;
   cursor: pointer;
   z-index: 100;
+
+  flex-grow: 1;
 
   font-family: 'Poppins';
 
